# dlib-cmake-example

./: CMakeLists.txt  README.rst  foo.cpp
.github/workflows/: build.yml
